--- a/assets/css/bootstrap/bootstrap-reboot.compiled.css
+++ b/assets/css/bootstrap/bootstrap-reboot.compiled.css
@@ -278,6 +278,11 @@ legend {
   color: inherit;
   white-space: normal;
 }
+@media (max-width: 1200px) {
+  legend {
+    font-size: calc(1.275rem + 0.3vw);
+  }
+}
 
 progress {
   vertical-align: baseline;
