--- a/assets/css/page.compiled.css
+++ b/assets/css/page.compiled.css
@@ -43,9 +43,17 @@ header .btn:hover {
   border-color: black;
 }
 .nav.nav-pills.pills--lg .nav-link {
-  font-size: 1.5rem;
-  padding: 0.5rem 2.5rem;
-  margin: 0.5rem;
+  font-size: 1rem;
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .nav.nav-pills.pills--lg .nav-link {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 768px) {
+  .nav.nav-pills.pills--lg .nav-link {
+    font-size: 1.5rem;
+  }
 }
 
 .btn--noshadow {
